ci: group xterm packages in dependabot
Ensures @xterm/xterm and @xterm/addon-* always update together,
preventing peer dependency mismatches like xterm 6.0.0 without
compatible addon versions.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -35,7 +35,16 @@ updates:
       npm-minor:
         patterns:
           - "*"
+        exclude-patterns:
+          - "@xterm/*"
         update-types:
+          - "minor"
+          - "patch"
+      xterm:
+        patterns:
+          - "@xterm/*"
+        update-types:
+          - "major"
           - "minor"
           - "patch"
     open-pull-requests-limit: 5
